Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-128466

Incorrect QInputDevice::capabilities() value for Apple Pencil

XMLWordPrintable

    • iOS/tvOS/watchOS
    • 38aa7f5fe (dev)

      In Qt for iOS with Apple Pencil, QTabletEvent::xTilt() and yTilt() have value for tilt of pencil, but QTabletEvent::device()->capabilities() doesn't contains QInputDevice::Capabilitiy::XTilt and YTilt value. 

      Expect: capabilities() contains XTilt and YTilt value.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            srutledg Shawn Rutledge
            takahr Takahiro HIDAKA
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:

                There are no open Gerrit changes