iOS: Add QPointingDevice for Apple Pencil

For Apple Pencil 1st generation, it supports xTilt and yTilt
capabilities.

Task-number: QTBUG-128466
Change-Id: I572a303a4d213417004cacadbc7cef9c96334720
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>